# ChangeLog for dev-php/phing
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/phing/ChangeLog,v 1.8 2011/03/06 11:20:33 olemarkus Exp $

*phing-2.4.5 (06 Mar 2011)

  06 Mar 2011; <olemarkus@gentoo.org> -phing-2.4.1.ebuild, +phing-2.4.5.ebuild:
  Version bump

  14 Jun 2010; <mabi@gentoo.org> -phing-2.2.0.ebuild, -phing-2.3.0.ebuild,
  -phing-2.3.3.ebuild, phing-2.4.1.ebuild:
  remove old, drop package.mask'ed creole dependency

*phing-2.4.1 (29 May 2010)

  29 May 2010; <mabi@gentoo.org> +phing-2.4.1.ebuild:
  version bump

*phing-2.3.3 (01 Jan 2010)

  01 Jan 2010; Ben de Groot <yngwin@gentoo.org> +phing-2.3.3.ebuild:
  Version bump, fixes bug 256069. Thanks to Michael Dehler for the updated
  ebuild.

*phing-2.3.0 (15 Nov 2007)

  15 Nov 2007; Markus Ullmann <jokey@gentoo.org> +phing-2.3.0.ebuild:
  Version bump from project overlay

  14 Nov 2007; Jakub Moc <jakub@gentoo.org> +phing-2.3.0.ebuild:
  Version bump, Bug 199140

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> phing-2.2.0.ebuild:
  Fix DEPs.

  18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> phing-2.2.0.ebuild:
  Cleanup.

  25 Sep 2006; Luca Longinotti <chtekk@gentoo.org> phing-2.2.0.ebuild:
  Fix missing http:// in SRC_URI, thanks to ferringb.

  20 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -phing-2.1.1.ebuild:
  Clean out old version.

*phing-2.2.0 (19 Sep 2006)

  19 Sep 2006; Sebastian Bergmann <sebastian@gentoo.org>
  +phing-2.2.0.ebuild:
  Version bump.

  18 Aug 2006; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  phing-2.1.1.ebuild:
  Fix needed USE flags.

*phing-2.1.1 (04 Jan 2006)

  04 Jan 2006; Sebastian Bergmann <sebastian@gentoo.org>
  -phing-2.1.0.ebuild, +phing-2.1.1.ebuild:
  Version bump.

  01 Jan 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +phing-2.1.0.ebuild:
  Moved from dev-php/phing to dev-php5/phing.
