@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/phing
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/phing/ChangeLog,v 1.8 2011/03/06 11:20:33 olemarkus Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/phing/ChangeLog,v 1.9 2012/02/02 15:41:47 olemarkus Exp $
+
+*phing-2.4.9 (02 Feb 2012)
+
+  02 Feb 2012; Ole Markus With <olemarkus@gentoo.org> +phing-2.4.9.ebuild:
+  Version bump
 
 *phing-2.4.5 (06 Mar 2011)
 
